2008-07-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Improve message in failure to dump in degraded
			       mode.

2008-07-16 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/control,
	  packaging/rpm/amanda.spec: added explicit dependency on openssl, and a 
	  build dependency for openssl and curl development files.

2008-07-15  Dustin J. Mitchell <dustin@zmanda.com>
	* example/xinetd.amandaserver.in example/xinetd.amandaclient.in:
	  specifying both IPv{4,6} does not work; remove IPv4

2008-07-15  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Add new man pages.
	* man/xml-source/script-email.8.xml: New man page.
	* man/xml-source/amanda.8.xml: List new man pages.
	* man/xml-source/amanda-scripts.7.xml: New man page.

2008-07-15  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in: generate (x)inetd files
	* example/inetd.conf.amandaclient.in example/xinetd.amandaclient.in
	  example/xinetd.amandaserver.in: give appropriate path for amandad,
	  from configure (fixes builds on 64-bit machines)

2008-07-15  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/client_util.c: #include "glib-util.h"
	* common-src/glib-util.c: New g_ptr_array_foreach fucntion.
	* common-src/glib-util.h: Prototype of g_ptr_array_foreach.
	* device-src/rait-device.c: Remove g_ptr_array_foreach.

2008-07-15  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Read stdout of scripts.
	* client-src/client_util.h: New prototype for run_client_scripts,
				    New client_script_result_t struct.
	* client-src/sendbackup.c: Send scripts properties to application.
	* client-src/sendsize.c: Send scripts properties to application.
	* client-src/selfcheck.c: Send scripts properties to application.
	* recover-src/extract_list.c: Send scripts properties to application.
	* common-src/amxml.h (script_t) Add field to keep result of script.
	* common-src/amxml.c: Set script->result to NULL.

2008-07-14 Dan Locks <dwlocks@zmanda.com>